Added the '-n "test:directory" option as alternative to the wifi/SSID-option:
Example:

./pick_random_wallpapers.sh -n "ping -c 1 192.168.1.1 >/dev/null && arp |grep -i '192.168.1.1'|grep -oP '\w{2}:\w{2}:\w{2}:\w{2}:\w{2}:\w{2}' | grep -qi 'ab:cd:ef:12:34:56'=MyhomenetworkWallpaperFolder"

(this doesn't require root access for acquiring the MAC address of the device, unlike e.g. nmap, arping etc). The "-n" option will currently be my preferred approach, as my laptop always has plugged in ethernet, when at home.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-aspect_ratios.txt
-median_aspect_ratio.txt
-sortedAspectList.txt
-
-# Below is my SSID-folder
+# Personal working folders and files:
 Machine
+systemd/wallpaper_renewal.service
+systemd/wallpaper_renewal.timer
 
